Get rid of useless CSS. Also change media query for potential fix where images not showing up on iphone.

--- a/src/components/skill-page/Skills/skills.module.css
+++ b/src/components/skill-page/Skills/skills.module.css
@@ -4,11 +4,6 @@
     gap: 1rem;
 }
 
-.image {
-    width: 100%;
-    height: 100%;
-}
-
 .skillCardsContainer {
     display: flex;
     flex-wrap: wrap;
@@ -36,6 +31,7 @@
 
     .skillCardContainer {
         width: 200px;
+        aspect-ratio: 1 / 1.33;
     }
 }
 
